# rust-gpu-buffer-indexing

./: Cargo.toml  rust-toolchain
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/shader/: Cargo.toml
crates/shader/glsl/: copyshader.comp  shared.glsl
crates/shader/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
