[workspace]
members = [
"crates/app",
"crates/shared",
"crates/shader",
]


[workspace.dependencies]
marpii = {git = "https://gitlab.com/tendsinmende/marpii.git", default-features = false, features = ["default_allocator", "logging"]}
marpii-rmg = {git = "https://gitlab.com/tendsinmende/marpii.git"}
marpii-rmg-shared = {git = "https://gitlab.com/tendsinmende/marpii.git"}
marpii-rmg-tasks = {git = "https://gitlab.com/tendsinmende/marpii.git"}
marpii-rmg-task-shared = {git = "https://gitlab.com/tendsinmende/marpii.git"}
winit = "0.27"
spirv-std = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }
spirv-builder = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block"}
bytemuck = "1"
log = "0.4.15"
ahash = "0.8.2"
anyhow = "1.0.56"
simple_logger = "4"
